fixed scrollbar width

--- a/css/base_alt.css
+++ b/css/base_alt.css
@@ -3870,7 +3870,7 @@ dl.stats dd {
 
 * {
     scrollbar-color: var(--border4) var(--bg5);
-    scrollbar-width: thin;
+    scrollbar-width: auto;
 }
 
 *::selection {
